refactor: migrate from SQLite to Postgres

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=poems.db"
+    "DefaultConnection": "Host=poem-generator-db-hl;Port=5432;Database=poemsdb;Username=postgres;Password=dbpwx123;SSL Mode=Disable"
   },
   "Logging": {
     "LogLevel": {
