chore(devops): add rabbitmq to the helm chart

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMq": {
+    "HostName": "poem-generator-messaging-headless",
+    "Port": 5672,
+    "UserName": "user",
+    "Password": "rabbitx"
+  }
 }
