--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-version: "2.0.0"
+version: "3.0.0"
 name: poem-generator
 dependencies:
 - name: postgresql
@@ -7,3 +7,8 @@ dependencies:
   version: "16.7.24"
   repository: https://charts.bitnami.com/bitnami
   condition: dependencies.postgresql.enabled
+- name: rabbitmq
+  alias: messaging
+  version: 12.x.x
+  repository: https://charts.bitnami.com/bitnami
+  condition: dependencies.messaging.enabled
